inference/04-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-green
  namespace: mlops-green
  labels:
    app: inference
    version: green
    environment: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inference
      version: green
  template:
    metadata:
      labels:
        app: inference
        version: green
        environment: green
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: inference
        image: aayud/nyc-taxi-inference:v2
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /live
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
